# autovision_mini_middleware_v1

./: .gitignore  CMakeLists.txt  README.md
docs/: AutoVision_Mini_Middleware_V1_5_NextTasks_USB3_YUYV_Runtime_任务书.md  AutoVision_Mini_Middleware_V1_6_NextTasks_YUYV_Fused_Preprocess_任务书.md  AutoVision_Mini_Middleware_V1_7_完整合并任务书_含主工程代码_性能可视化log.md  AutoVision_Mini_Middleware_V1_8_完整合并任务书_含V1_7_三项性能优化_主工程代码.md  AutoVision_Mini_Middleware_V1_9_完整合并任务书_新增中间件补强功能_含主工程完整代码.md  AutoVision_Mini_Middleware_V1_完整合并任务书_含主工程代码_examples测试.md  V2_0_新增命令与Git步骤.md  V2_1_新增命令与Git步骤.md  V2_2_新增命令与Git步骤.md  V2_3_新增命令与Git步骤.md  V2_4_新增命令与Git步骤.md  V2_5_新增命令与Git步骤.md  V2_6_新增命令与Git步骤.md  camera_usb3_1_retest_report.md  design.md  dmabuf_zero_copy_design.md  edgefirst_mapping.md  examples_test_report.md  interview_summary.md  performance_report.md  performance_report_template.md  performance_report_v1_5.md  performance_report_v1_6_template.md  validation_v1_9_featurepack.md  validation_v2_0_video_encode.md  validation_v2_2_transport_pattern.md  validation_v2_3_fastdds_rtps.md  validation_v2_4_camera_fastdds_pubsub.md  validation_v2_5_dds_shm_mixed_route.md  validation_v2_6_gstreamer_camera_pipeline.md
docs/local_validation/: v2_0_vmware_validation.md  v2_1_cammw_transport_bridge_validation.md  v2_1_transport_bridge_validation.md  v2_3_fastdds_rtps_container_validation.md  v2_3_fastdds_rtps_real_validation.md  v2_5_dds_shm_mixed_route_container_validation.md  v2_5_vmware_fastdds_validation_summary.md  v2_6_gstreamer_camera_pipeline_container_validation.md  v2_6_gstreamer_camera_pipeline_vmware_validation.md
docs/validation/: file_rgb_perf.csv  final_status_file_pipeline.txt  linux_validation_report_v1_7.md  linux_validation_report_v1_8.md  synthetic_perf_compare.html  synthetic_perf_compare_summary.csv  v1_8_frame_lease_pool.csv  v1_8_preprocess_compare.html  v1_8_preprocess_compare_summary.csv
examples/: Makefile  README.md
examples/cpp/: 00_crc32.cpp  01_latency_profiler.cpp  02_control_cmd.cpp  03_file_adapter.cpp  04_lidar_sim_adapter.cpp  05_shm_frame_pool.cpp  06_shm_ring_buffer.cpp  07_shared_status.cpp  08_frame_consumer.cpp  08_frame_producer.cpp  09_sensor_to_shm.cpp  10_control_query.cpp  11_camera_adapter_v4l2.cpp  12_yuyv_fused_preprocess.cpp  13_preprocess_benchmark_compare.cpp  14_frame_lease_pool.cpp  15_fd_passing_alive_counter.cpp  16_udp_lidar_timestamp_sync.cpp  17_nv12_libyuv_preprocess.cpp  18_runtime_metadata_detection.cpp  19_affinity_priority_benchmark.cpp  20_video_encode_benchmark.cpp  21_transport_four_links.cpp  22_transport_pattern.cpp  23_fastdds_packet_codec.cpp  24_camera_fastdds_packet.cpp  25_dds_shm_frame_meta.cpp  26_gstreamer_pipeline_config.cpp
include/: avm_config.hpp  camera_adapter_v4l2.hpp  control_cmd.hpp  crc32.hpp  dds_shm_frame_meta.hpp  detection_result.hpp  dummy_runtime.hpp  fastdds_rtps_transport.hpp  fd_passing.hpp  file_adapter.hpp  frame_lease.hpp  frame_meta.hpp  gstreamer_camera_adapter.hpp  gstreamer_pipeline_config.hpp  image_preprocess.hpp  inference_runtime.hpp  latency_profiler.hpp  lidar_sim_adapter.hpp  local_pubsub_transport.hpp  mpp_video_encoder.hpp  raii_fd.hpp  record_replay.hpp  rknn_runtime_stub.hpp  runtime_config.hpp  runtime_factory.hpp  runtime_metadata.hpp  runtime_output.hpp  safety_status.hpp  sensor_adapter.hpp  sensor_frame.hpp  shared_status.hpp  shm_frame_pool.hpp  shm_ring_buffer.hpp  soft_video_encoder.hpp  system_tuning.hpp  tensor_meta.hpp  time_utils.hpp  timestamp_sync.hpp  transport_endpoint.hpp  transport_message.hpp  (+4 more)
scripts/: benchmark_affinity_priority.sh  benchmark_camera_dds_shm.sh  benchmark_camera_fastdds_pub_sub.sh  benchmark_encode.sh  benchmark_fastdds_rtps.sh  benchmark_gstreamer_camera.sh  benchmark_transport_four_links.sh  benchmark_transport_pattern.sh  benchmark_v1_6_camera_compare.sh  benchmark_v1_7_camera_compare.sh  benchmark_v1_7_synthetic_compare.sh  benchmark_v1_8_vm_perf_opt.sh  benchmark_v1_9_featurepack.sh  build.sh  check_usb_camera_v1_5.sh  clean_ipc.sh  collect_report.sh  format.sh  inject_fault.sh  prepare_input.sh  profile_preprocess_perf.sh  run_all_vm.sh  run_camera_dds_shm.sh  run_camera_fastdds_pub_sub.sh  run_camera_pipeline.sh  run_camera_pipeline_yuyv_fused.sh  run_encode_pipeline.sh  run_file_pipeline.sh  run_gstreamer_camera_capture.sh  run_gstreamer_encode_stream.sh  run_record_replay_demo.sh  visualize_perf_compare.py
src/: algorithm_stub_node.cpp  camera_adapter_v4l2.cpp  camera_dds_shm_pub.cpp  camera_dds_shm_sub.cpp  camera_fastdds_pub.cpp  camera_fastdds_sub.cpp  control_client.cpp  control_service.cpp  crc32.cpp  dds_shm_frame_meta.cpp  detection_result.cpp  dummy_runtime.cpp  encode_sink_node.cpp  fastdds_rtps_loopback_demo.cpp  fastdds_rtps_transport.cpp  fd_passing.cpp  file_adapter.cpp  frame_lease.cpp  gstreamer_camera_adapter.cpp  gstreamer_camera_capture_node.cpp  gstreamer_encode_stream_node.cpp  gstreamer_pipeline_config.cpp  image_preprocess.cpp  latency_profiler.cpp  lidar_sim_adapter.cpp  local_pubsub_transport.cpp  media_node.cpp  mpp_video_encoder.cpp  npu_stub_node.cpp  preprocess_node.cpp  record_replay.cpp  rknn_runtime_stub.cpp  runtime_factory.cpp  runtime_metadata.cpp  safety_monitor.cpp  shared_status.cpp  shm_frame_pool.cpp  shm_ring_buffer.cpp  soft_video_encoder.cpp  system_tuning.cpp  (+8 more)
